Fixed overflow issues with forms

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,8 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    min-height: 700px;
 }
 
 body {
@@ -193,10 +194,11 @@ a:active {
 .center-form {
     width: 100vw;
     height: 100vh;
+    padding-top: 197px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .main-content__container {
@@ -683,5 +685,14 @@ a:active {
 
 .popup__delete-btn {
     background: var(--main-red);
+}
+
+/* Media Queries */
+
+@media (max-height: 700px) {
+    .profile__leave-buttons {
+        position: relative;
+        margin-top: 20px;
+    }
 }
 
